@@ -18,11 +18,11 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
 
-      - name: "Install tools"
-        uses: DeLaGuardo/setup-clojure@13.2
+      - name: "Prepare Clojure tools"
+        uses: DeLaGuardo/setup-clojure@13.4
         with:
-          cljstyle: 0.17.642
-          clj-kondo: 2025.04.07
+          cljstyle: 0.17.642    # Cljstyle
+          clj-kondo: 2025.06.05 # Clj-kondo
 
       - name: "Lint Clojure"
         run: clj-kondo --lint deps.edn --config '{:output {:pattern "::{{level}} file={{filename}},line={{row}},col={{col}}::{{message}}"}}'
